Bug 400482 - existing blog feed is not editable/erasable
Summary: existing blog feed is not editable/erasable
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 400483 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-10-30 14:48 UTC by olignomi
Modified: 2018-11-08 07:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description olignomi 2018-10-30 14:48:33 UTC
SUMMARY


STEPS TO REPRODUCE
1. open kontact
2. select any contact including an existing "blog feed"
3. blog feed will be displayed in the preview window

OBSERVED RESULT
old available blog feed is visible, but not editable/erasable

EXPECTED RESULT
should be editable/erasable

SOFTWARE VERSIONS
(available in About System)
KDE Plasma Version: 5.14.2
KDE Frameworks Version: 5.51.0
Qt Version: 5.11.2

ADDITIONAL INFORMATION
Kontact: Version 5.9.2
Comment 1 Patrick Silva 2018-10-30 16:20:15 UTC
*** Bug 400483 has been marked as a duplicate of this bug. ***
Comment 2 Laurent Montel 2018-11-06 12:38:24 UTC
Could you export this contact and send me it in private ?
I need to look at what is missing in kaddressbook.

Thanks
Comment 3 olignomi 2018-11-06 17:15:22 UTC
Done. Have sent two *.vcf's and a screenshot.
Comment 4 Laurent Montel 2018-11-08 07:03:09 UTC
Git commit bfb4eb488a9676212820e45d85155a4a6925cbca by Laurent Montel.
Committed on 08/11/2018 at 07:02.
Pushed by mlaurent into branch 'master'.

Fix Bug 400482 - existing blog feed is not editable/erasable
FIXED-IN: 5.10.0

M  +3    -2    src/contact-editor/editor/generalinfoeditor/blogfeedwidget.cpp

https://commits.kde.org/akonadi-contacts/bfb4eb488a9676212820e45d85155a4a6925cbca