Fix Bug 400482 - existing blog feed is not editable/erasable

BUG: 400482
FIXED-IN: 5.10.0